--- a/cars/templates/new_car.html
+++ b/cars/templates/new_car.html
@@ -1,20 +1,27 @@
 {% extends 'base.html' %}
+{% load form_tags %}
 
 {% block content %}
+<div class="container my-5">
+    <h1 class="text-center mb-4">Cadastrar Carro</h1>
 
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" class="bg-light p-4 rounded shadow mx-auto" style="max-width: 600px;">
         {% csrf_token %}
-        <div class="car">
-            <table>
-                {{ form.as_table }}
-            </table>
+
+        {% for field in form %}
+        <div class="mb-3">
+            <label for="{{ field.id_for_label }}" class="form-label fw-semibold">{{ field.label }}</label>
+            {{ field|add_class:"form-control" }}
+            {% if field.errors %}
+            <div class="text-danger small mt-1">{{ field.errors|striptags }}</div>
+            {% endif %}
         </div>
-        
-        <br>
-        <div class="buttons-container">
-            <input type="submit"  value="Cadastar" class="btn btn-primary">
-            <a href="{% url "cars_list" %}" class="btn btn-primary">Voltar</a>
+        {% endfor %}
+
+        <div class="d-flex justify-content-between mt-4">
+        <button type="submit" class="btn btn-primary px-4">Cadastrar</button>
+        <a href="{% url 'cars_list' %}" class="btn btn-secondary px-4">Voltar</a>
         </div>
     </form>
-
+</div>
 {% endblock %}
