--- a/static/css/car_view.css
+++ b/static/css/car_view.css
@@ -1,3 +1,34 @@
+.car-view-container{
+    height: 50px;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    z-index: 1;
+
+}
+.car_view{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+
+}
+
+.card-columns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 40px 20px;
+    gap: 20px;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+}
 
 .car-grid {
     display: grid;
@@ -6,6 +37,7 @@
     margin: 0 auto;
     max-width: 1200px;
     padding: 20px;
+
 }
 
 .car-card {
@@ -45,6 +77,14 @@
     margin-bottom: 10px;
 }
 
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+
+}
+
 @media (max-width: 768px) {
     .car-grid {
         grid-template-columns: repeat(2, 1fr);
@@ -57,15 +97,15 @@ form {
     align-items: center;
     margin-bottom: 20px;
     text-align: center;
-    padding: 20px;
+    padding: 20px;;
 }
 
 input[type="text"] {
-    padding: 10px;
+    padding: 2px;
     font-size: 16px;
     border: 2px solid #e3e1e1;
     border-radius: 4px;
-    margin-right: 10px;
+
     transition: border-bottom-color 0.3s ease-in-out;
 }
 
