--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,5 @@
-<footer>
-    <p>&copy; 2025 JP Multimarcas</p>
+<footer class="bg-dark text-white py-4 mt-5">
+    <div class="container text-center">
+        <p class="mb-0">&copy; 2025 JP Multimarcas. Todos os direitos reservados.</p>
+    </div>
 </footer>
